--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -30,13 +30,14 @@
               </a>
             </li>
             <li class="shrink-0 ">
+              {{#if user}}
               <button data-modal-target="authentication-modal" data-modal-toggle="authentication-modal"
                 id="ai_button"
                 class="text-white bg-gradient-to-br from-green-400 to-blue-600 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-green-200 dark:focus:ring-green-800 font-medium rounded-lg text-sm me-2 mb-2 px-1 py-0 text-center "
                 type="button">
                 Ask Ai
               </button>
-
+              {{/if}}
             </li>
             <li class="shrink-0">
               <a href="/contact_us" title="" style="text-decoration: none;"
