--- a/views/users/product_details.hbs
+++ b/views/users/product_details.hbs
@@ -111,8 +111,10 @@
 
         <h2 class="font-bold">Seller Details</h2>
         <p>{{product.seller_name}}</p>
-        <p>{{product.seller_phone_number}}</p>
-        <p>{{product.seller_email}}</p>
+        <p><a href="tel:{{product.seller_phone_number}}" style="text-decoration: none;">
+          {{product.seller_phone_number}}</a></p>
+        <p><a href="mailto:{{product.seller_email}}" style="text-decoration: none;" >
+          {{product.seller_email}}</a></p>
         <p>{{product.seller_address}}</p>
 
       </div>
