--- a/views/users/cart.hbs
+++ b/views/users/cart.hbs
@@ -108,8 +108,9 @@
               <dd id="total" class="text-base font-bold text-gray-900 dark:text-white">₹ {{total.total}}</dd>
             </dl>
           </div>
-          <div class="flex items-center justify-center gap-2">
-            <a href="/place_order" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">
+          <div class=" flex items-center justify-center gap-2">
+            <a href="/place_order" style="display: inline-block;"
+             class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">
             Place Order</a>
           </div>
         </div>
