--- a/views/partials/user_header.hbs
+++ b/views/partials/user_header.hbs
@@ -46,9 +46,9 @@
               </a>
             </li>
             <li class="shrink-0">
-              <a href="/test" title="" style="text-decoration: none;"
+              <a href="/test" title="" style="text-decoration: none;" 
                 class="flex text-sm font-medium text-gray-900 hover:text-primary-700 dark:text-white dark:hover:text-primary-500">
-                test
+                <!--test-->
               </a>
             </li>
           </ul>
