--- a/views/users/product_details.hbs
+++ b/views/users/product_details.hbs
@@ -116,12 +116,12 @@
         <hr class="my-6 md:my-8 border-gray-200 dark:border-gray-800" />
 
         <h2 class="font-bold">Seller Details</h2>
-        <p>{{product.seller_name}}</p>
+        <p>Seller name:{{product.seller_name}}</p>
         <p><a href="tel:{{product.seller_phone_number}}" style="text-decoration: none;">
-          {{product.seller_phone_number}}</a></p>
+          Seller Phone Number:{{product.seller_phone_number}}</a></p>
         <p><a href="mailto:{{product.seller_email}}" style="text-decoration: none;" >
-          {{product.seller_email}}</a></p>
-        <p>{{product.seller_address}}</p>
+          Seller Email:{{product.seller_email}}</a></p>
+        <p>Seller Address:{{product.seller_address}}</p>
 
       </div>
     </div>
