--- a/views/users/signup.hbs
+++ b/views/users/signup.hbs
@@ -2,7 +2,7 @@
   <div class="sm:mx-auto sm:w-full sm:max-w-sm">
     <img
       class="mx-auto h-10 w-auto rounded"
-      src="images/website_icon.jpeg"
+      src="images/website_icon.jpg"
       alt="Your Company"
     />
     <h2
