--- a/views/admin/admin_order_details.hbs
+++ b/views/admin/admin_order_details.hbs
@@ -33,7 +33,7 @@
                 </td>
                 <td class="p-4 text-base font-normal text-gray-900 dark:text-white">x {{this.quantity}}</td>
                 <td class="p-4 text-right text-base font-bold text-gray-900 dark:text-white">
-                <span style="font-weight: bold;"> ₹ {{#cal_price   this.product.Price this.quantity}}{{/cal_price}}</span></td>
+                <span style="font-weight: bold;"> ₹ {{#cal_price   this.product.price this.quantity}}{{/cal_price}}</span></td>
               </tr>
               {{/each}}
             </tbody>
